# SoulAndroidKit

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.cursor/rules/: 00-工作流程.mdc  00-项目结构目录.mdc  01-项目结构.mdc  02-功能测试.mdc  03-ui创建规则.mdc  04-编码规范.mdc  05-依赖管理.mdc  task-bug_fix.mdc  task-business_action.mdc  task-logic_change.mdc  task-new_feature.mdc  task-other.mdc  task-refactor.mdc  task-ui_task.mdc
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/soul/android_kit/: BaseApplication.kt  MainActivity.kt
app/src/main/java/com/soul/android_kit/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/soul/soulkit/test/: BaseTestActivity.kt  README.md  TestMainActivity.kt  TestModuleAdapter.kt
app/src/main/java/com/soul/soulkit/test/common/: CommonTestActivity.kt  CommonTestMethods.kt
app/src/main/java/com/soul/soulkit/test/core/: CoreModelTestActivity.kt
app/src/main/java/com/soul/soulkit/test/database/: DatabaseTestActivity.kt
app/src/main/java/com/soul/soulkit/test/ffmpeg/: FfmpegModelTestActivity.kt
app/src/main/java/com/soul/soulkit/test/kit/: CoreModelTestActivity.kt  KitCoreModelTestActivity.kt
app/src/main/java/com/soul/soulkit/test/video/: VideoTestActivity.kt
app/src/main/res/drawable/: button_primary.xml  button_secondary.xml  circle_background.xml
app/src/main/res/layout/: activity_common_test.xml  activity_test_main.xml  activity_video_test.xml  item_test_module.xml
app/src/main/res/values/: colors.xml  themes.xml
audio/piano_note_recognition/: CMakeLists.txt  build.gradle.kts
audio/piano_note_recognition/src/androidTest/java/com/soul/piano_note_recognition/: ExampleInstrumentedTest.kt
audio/piano_note_recognition/src/main/cpp/: PitchDetector.cpp  PitchDetector.h  native-lib.cpp
audio/piano_note_recognition/src/main/cpp/audio/: AudioEngine.cpp  AudioEngine.h
audio/piano_note_recognition/src/main/cpp/dsp/: FFTWrapper.cpp  FFTWrapper.h  HPS.cpp  HPS.h  YINWrapper.cpp  YINWrapper.h
audio/piano_note_recognition/src/main/cpp/include/aubio/: aubio.h
audio/piano_note_recognition/src/main/cpp/include/pffft/: pffft.h
audio/piano_note_recognition/src/main/java/com/soul/piano_note_recognition/: PianoNoteRecognizer.kt
audio/piano_note_recognition/src/test/java/com/soul/piano_note_recognition/: ExampleUnitTest.kt
core/common/: README.md  build.gradle.kts
core/common/src/main/java/com/soul/common/: CrashHandler.java  Global.java
core/common/src/main/java/com/soul/common/bean/: AppInfo.java
core/common/src/main/java/com/soul/common/thread/: ThreadFactory.java  ThreadPoolProxy.java  ThreadPoolUtils.java
core/common/src/main/java/com/soul/common/tool/: Loop.kt
core/common/src/main/java/com/soul/common/utils/: AppUtils.java  Bar2Utils.java  BarUtils.java  CameraUtils.java  CleanUtils.java  ClipboardUtils.java  CloseUtils.java  ConstUtils.java  ConvertUtils.java  CrashUtils.java  DateUtils.java  Dates.java  DeviceUtils.java  EDensityUtils.java  EmptyUtils.java  EncodeUtils.java  EncryptUtils.java  FileHelp.java  FileUtils.java  FlashlightController.java  HandlerUtils.java  IOUtils.java  ImageUtils.java  IntentUtils.java  KeyboardUtils.java  LocationUtils.java  LogUtil.java  LogUtils.java  SHAUtil.java  (+23 more)
core/composeui/: build.gradle.kts
core/database/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/media/: build.gradle.kts
core/network/: build.gradle.kts
core/ui/: build.gradle.kts
feature/video/: README.md  build.gradle.kts
feature/video/src/main/res/drawable/: error_background.xml
feature/video/src/main/res/layout/: fragment_video_player.xml
ffmpeg/ffmpeg_kit/: CMakeLists.txt  README.md  build.gradle.kts  build.gradle.kts.backup
ffmpeg/ffmpeg_kit/src/androidTest/java/com/soul/ffmpeg_kit/: ExampleInstrumentedTest.kt
ffmpeg/ffmpeg_kit/src/main/: AndroidManifest.xml
ffmpeg/ffmpeg_kit/src/main/cpp/: README.md  ffmpeg_player.c
ffmpeg/ffmpeg_kit/src/main/cpp/include/: ffmpeg_executor.h  ffmpeg_kit_config.h
ffmpeg/ffmpeg_kit/src/main/cpp/include/ffmpeg/: config.h
ffmpeg/ffmpeg_kit/src/main/cpp/include/ffmpeg/libavutil/: ffversion.h  file.h  internal.h
ffmpeg/ffmpeg_kit/src/main/cpp/src/: config.h  ffmpeg_executor.c  ffmpeg_kit_config.c  ffmpeg_player.c  ffmpegkit.c  ffmpegkit_abidetect.c  ffprobekit.c  fftools_cmdutils.c  test_config.c
ffmpeg/ffmpeg_kit/src/main/java/com/arthenica/ffmpegkit/: NativeLoader.java
ffmpeg/ffmpeg_kit/src/main/java/com/soul/ffmpeg_kit/: FFmpegPlayer.kt  FFmpegTestActivity.kt
ffmpeg/ffmpeg_kit/src/main/java/com/soul/ffmpegkit/: Abi.java  AbiDetect.java  AbstractSession.java  AsyncFFmpegExecuteTask.java  AsyncFFprobeExecuteTask.java  AsyncGetMediaInformationTask.java  CameraSupport.java  Chapter.java  FFmpegKit.java  FFmpegKitConfig.java  FFmpegPlayer.kt  FFmpegSession.java  FFmpegSessionCompleteCallback.java  FFmpegTestActivity.kt  FFprobeKit.java  FFprobeSession.java  FFprobeSessionCompleteCallback.java  Level.java  Log.java  LogCallback.java  LogRedirectionStrategy.java  MediaInformation.java  MediaInformationJsonParser.java  MediaInformationSession.java  MediaInformationSessionCompleteCallback.java  NativeLoader.java  Packages.java  ReturnCode.java  Session.java  SessionState.java  Signal.java  Statistics.java  StatisticsCallback.java  StreamInformation.java
ffmpeg/ffmpeg_kit/src/main/java/com/soul/utils/: FfmpegCutter.kt
ffmpeg/ffmpeg_kit/src/main/java/utils/: FfmpegCutter.kt
ffmpeg/ffmpeg_kit/src/main/jni/: ffmpeg_player.c  ffmpeg_player_stub.c
ffmpeg/ffmpeg_kit/src/main/res/layout/: activity_ffmpeg_test.xml
ffmpeg/ffmpeg_kit/src/main/res/values/: colors.xml  strings.xml  themes.xml
ffmpeg/ffmpeg_kit/src/test/java/com/soul/ffmpeg_kit/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kit/video/: proguard-rules.pro
kit/video/src/main/: AndroidManifest.xml
kit/video/src/main/res/drawable/: ic_pause.xml  ic_play_arrow.xml  ic_stop.xml
kit/video/src/main/res/layout/: fragment_video_player.xml
kit/video/src/main/res/values/: colors.xml
(+47 files in other folders)
